fix logic, add more specs

--- a/spec/support/mongoid/mongoid.yml
+++ b/spec/support/mongoid/mongoid.yml
@@ -1,6 +1,6 @@
 test:
   clients:
     default:
-      database: black_and_white_test
+      database: black_and_white
       hosts:
         - localhost:27017
